--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "radio-button-react-native": "^1.1.6",
     "react": "16.2.0",
-    "react-native": "0.52.0",
+    "react-native": "^0.52.0",
     "react-native-image-picker": "^0.26.7",
+    "react-native-swipeout": "^2.3.3",
     "react-navigation": "^1.0.0-beta.27"
   },
   "devDependencies": {
