--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-super-grid": "^2.0.2",
     "react-native-swipeout": "^2.3.3",
-    "react-navigation": "^1.0.0-beta.27"
+    "react-navigation": "^1.0.0-beta.27",
+    "react-redux": "*",
+    "redux": "*"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
