--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "dependencies": {
     "radio-button-react-native": "^1.1.6",
     "react": "16.2.0",
-    "react-native": "^0.52.0",
+    "react-native": "^0.52.2",
     "react-native-image-picker": "^0.26.7",
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-super-grid": "^2.0.2",
     "react-native-swipeout": "^2.3.3",
     "react-navigation": "^1.0.0-beta.27",
-    "react-redux": "*",
-    "redux": "*"
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
