--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-native-push-notification": "^3.0.2",
     "react-native-search-box": "0.0.13",
     "react-native-super-grid": "^2.0.2",
-    "react-native-swipeout": "^2.3.3",
+    "react-native-swipeout": "git+https://github.com/CandyOgre/react-native-swipeout.git",
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2"
