--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-swipeout": "git+https://github.com/CandyOgre/react-native-swipeout.git",
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
+    "realm": "^2.2.7",
     "redux": "^3.7.2"
   },
   "devDependencies": {
