--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "radio-button-react-native": "^1.1.6",
     "react": "16.2.0",
-    "react-native": "^0.52.2",
+    "react-native": "^0.53.3",
     "react-native-image-picker": "^0.26.7",
     "react-native-modal-datetime-picker": "^4.13.0",
     "react-native-push-notification": "^3.0.2",
@@ -18,8 +18,9 @@
     "react-native-swipeout": "git+https://github.com/CandyOgre/react-native-swipeout.git",
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
-    "realm": "^2.2.7",
-    "redux": "^3.7.2"
+    "realm": "*",
+    "redux": "^3.7.2",
+    "rnpm": "^1.9.0"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
